force-app/main/default/objects/KReservation__c/KReservation__c.object-meta.xml
<CustomObject>
    <label>KReservation</label>
    <nameField>
        <label>KReservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KReservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>