force-app/main/default/objects/KReservation__c/fields/DiscountedAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountedAmount__c</fullName>
    <label>DiscountedAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>