force-app/main/default/objects/KReservation__c/fields/KRoom__c.field-meta.xml
<CustomField>
    <fullName>KRoom__c</fullName>
    <label>KRoom</label>
    <referenceTo>KRoom__c</referenceTo>
    <relationshipLabel>KReservations</relationshipLabel>
    <relationshipName>KReservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>