force-app/main/default/objects/KReservation__c/fields/Number_of_Days_reserved__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_reserved__c</fullName>
    <formula>EndDate__c - StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days reserved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>