force-app/main/default/objects/KReservation__c/fields/Total_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount__c</fullName>
    <formula>KRoom__r.Tariff__c *  Number_of_Days_reserved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>