force-app/main/default/objects/KReservation__c/validationRules/ReservationDatesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ReservationDatesValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( EndDate__c &gt;  StartDate__c )</errorConditionFormula>
    <errorMessage>End Date should be always be greater than start date</errorMessage>
</ValidationRule>