force-app/main/default/objects/KReservation__c/validationRules/StartDateandEndDateValidations.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateandEndDateValidations</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISBLANK(EndDate__c) , ISBLANK(StartDate__c)),

NOT($Permission.ByPass_Mandatory_SEDates ))</errorConditionFormula>
    <errorMessage>Kindly Enter the Valid Start or End Date</errorMessage>
</ValidationRule>