force-app/main/default/objects/KReservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>KRoom__c</columns>
    <columns>Total_Booking_Amount__c</columns>
    <columns>DiscountedAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>